[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reflex-ag-grid-ce"
version = "0.0.1"
description = "AGGrid Community Edition wrapping for Reflex"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Léopold Grosjean", email = "leo.grosjean@gmail.com" }]
keywords = ["reflex-ag-grid-ce", "reflex-ag-grid", "ag-grid", "reflex", "reflex-custom-components", "aggrid", "dashboard"]

dependencies = ["reflex>=0.7.2"]

classifiers = ["Development Status :: 4 - Beta"]

[project.urls]
homepage = "https://ag-grid-demo.reflex.run/"
source = "https://github.com/LeoGrosjean/reflex-ag-grid-ce"

[project.optional-dependencies]
dev = ["build", "twine"]



[tool.setuptools.packages.find]
where = ["custom_components"]

[tool.ruff]
target-version = "py310"
output-format = "concise"
lint.isort.split-on-trailing-comma = false
lint.select = ["B", "C4", "E", "ERA", "F", "FURB", "I", "N", "PERF", "PTH", "RUF", "SIM", "T", "TRY", "W"]
lint.ignore = ["B008", "D205", "E501", "F403", "SIM115", "RUF006", "RUF008", "RUF012", "TRY0"]
lint.pydocstyle.convention = "google"
include = ["custom_components/**/*.py", "ag_grid_demo/**/*.py"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"env.py" = ["ALL"]
"*/alembic/*" = ["ALL"]
